--- a/_pages/activities.html
+++ b/_pages/activities.html
@@ -5,13 +5,13 @@ permalink: /activities/
 author_profile: true
 ---
 
-## What do I do apart from work?
-### Intel Involved Volunteering
-On 28th July 2017, Intel Oregon interns volunteered with SOLVE, to clean downtown Hillsboro, OR. I felt really good to give back to the community and environment, in general. 
 
 <!DOCTYPE html>
 <html>
 <head>
+  <h1> What do I do apart from work? </h1>
+  <h2> Intel Involved Volunteering </h2>
+  <p> On 28th July 2017, Intel Oregon interns volunteered with SOLVE, to clean downtown Hillsboro, OR. I felt really good to give back to the community and environment, in general. </p>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 * {box-sizing:border-box}
@@ -117,20 +117,20 @@ body {font-family: Verdana,sans-serif;margin:0}
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 3</div>
-  <img src="/files/intel_1.JPG" style="width:100%">
-  <div class="text">Caption Text</div>
+  <img src="/files/intel_1.JPG" style="width:50%">
+  <div class="text">With Oregon Interns</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 3</div>
-  <img src="/files/intel_2.JPG" style="width:100%">
-  <div class="text">Caption Two</div>
+  <img src="/files/intel_2.JPG" style="width:50%">
+  <div class="text">With Oregon Interns</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">3 / 3</div>
-  <img src="/files/intel_3.JPG" style="width:100%">
-  <div class="text">Caption Three</div>
+  <img src="/files/intel_3.JPG" style="width:50%">
+  <div class="text">Cleaning in Downtown Hillsboro</div>
 </div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
