--- a/_pages/activities.html
+++ b/_pages/activities.html
@@ -11,7 +11,7 @@ author_profile: true
 <head>
   <h1> What do I do apart from work? </h1>
   <h2> Intel Involved Volunteering </h2>
-  <p> On 28th July 2017, Intel Oregon interns volunteered with SOLVE, to clean downtown Hillsboro, OR. I felt really good to give back to the community and environment, in general. </p>
+  <font size="+2">Intel Oregon interns volunteered with SOLVE, to clean downtown Hillsboro, OR. I felt really good to give back to the community and environment, in general. </font>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 * {box-sizing:border-box}
