--- a/_pages/activities.html
+++ b/_pages/activities.html
@@ -15,12 +15,12 @@ author_profile: true
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 * {box-sizing:border-box}
-body {font-family: Verdana,sans-serif;margin:0}
+body {font-family: -apple-system,".SFNSText-Regular","San Francisco","Roboto","Segoe UI","Helvetica Neue","Lucida Grande",Arial,sans-serif;;margin:0}
 .mySlides {display:none}
 
 /* Slideshow container */
 .slideshow-container {
-  max-width: 700px;
+  max-width: 500px;
   position: relative;
   margin: auto;
 }
