--- a/_pages/activities.html
+++ b/_pages/activities.html
@@ -10,8 +10,9 @@ author_profile: true
 <html>
 <head>
   <h1> What do I do apart from work? </h1>
+  <ul>
   <h2> Intel Involved Volunteering </h2>
-  <font size="3">Intel Oregon interns volunteered with SOLVE, to clean downtown Hillsboro, OR. I felt really good to give back to the community and environment, in general. </font>
+  <p>Intel Oregon interns volunteered with SOLVE, to clean downtown Hillsboro, OR. I felt really good to give back to the community and environment, in general. </p>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 * {box-sizing:border-box}
@@ -173,6 +174,6 @@ function showSlides(n) {
   dots[slideIndex-1].className += " active";
 }
 </script>
-
+  </ul>
 </body>
 </html>
