--- a/_pages/activities.html
+++ b/_pages/activities.html
@@ -22,7 +22,7 @@ body {font-family: -apple-system,".SFNSText-Regular","San Francisco","Roboto","S
 
 /* Slideshow container */
 .slideshow-container {
-  max-width: 500px;
+  max-width: 600px;
   position: relative;
   margin: auto;
 }
@@ -119,19 +119,19 @@ body {font-family: -apple-system,".SFNSText-Regular","San Francisco","Roboto","S
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 3</div>
-  <img src="/files/intel_1.JPG" style="width:100%">
+  <img src="/files/intel_1.JPG" width="700" height="500">
   <div class="text">With Oregon Interns</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 3</div>
-  <img src="/files/intel_2.JPG" style="width:100%">
+  <img src="/files/intel_2.JPG" width="700" height="500">
   <div class="text">With Oregon Interns</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">3 / 3</div>
-  <img src="/files/intel_3.JPG" style="width:100%">
+  <img src="/files/intel_3.JPG" width="700" height="500">
   <div class="text">Cleaning in Downtown Hillsboro</div>
 </div>
 
