--- a/_pages/activities.html
+++ b/_pages/activities.html
@@ -64,6 +64,10 @@ body {font-family: -apple-system,".SFNSText-Regular","San Francisco","Roboto","S
   text-align: center;
 }
 
+ .mySlides>img {
+    width:99%;
+  }  
+  
 /* Number text (1/3 etc) */
 .numbertext {
   color: #f2f2f2;
@@ -119,7 +123,7 @@ body {font-family: -apple-system,".SFNSText-Regular","San Francisco","Roboto","S
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 3</div>
-  <img src="/files/intel_1.JPG" width="900" height="300">
+  <img src="/files/intel_1.JPG" style="width: 99%;">
   <div class="text">With Oregon Interns</div>
 </div>
 
