--- a/_pages/activities.html
+++ b/_pages/activities.html
@@ -286,7 +286,7 @@ body {font-family: -apple-system,".SFNSText-Regular","San Francisco","Roboto","S
 <div class="mySlides fade">
   <div class="numbertext">1 / 1</div>
   <img src="/images/scavenger.jpg" style="width: 99%;">
-  <div class="text">With Oregon Interns</div>
+  <div class="text">Intel's Scavenger Hunt Team </div>
 </div>
 
 
