--- a/_pages/activities.html
+++ b/_pages/activities.html
@@ -12,10 +12,10 @@ author_profile: true
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <body>
 
-<h2 class="w3-center">Manual Slideshow</h2>
+<h2 class="w3-center">Intel Involved Volunteering</h2>
 
 <div class="w3-content w3-display-container">
-  <img class="mySlides" src="img_fjords.jpg" style="width:100%">
+  <img class="mySlides" src="/images/intel_solve.png" style="width:100%">
   <img class="mySlides" src="img_lights.jpg" style="width:100%">
   <img class="mySlides" src="img_mountains.jpg" style="width:100%">
   <img class="mySlides" src="img_forest.jpg" style="width:100%">
