--- a/_pages/activities.html
+++ b/_pages/activities.html
@@ -7,12 +7,26 @@ author_profile: true
 
 <!DOCTYPE html>
 <html>
-<title>W3.CSS</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <body>
+<ul>
+<li>
+<h2>Intel Involved Volunteering</h2>
 
-<h2 class="w3-center">Intel Involved Volunteering</h2>
+<div class="w3-content w3-display-container">
+  <img class="mySlides" src="/images/intel_solve.png" style="width:100%">
+  <img class="mySlides" src="/images/scavenger.png" style="width:100%">
+  <img class="mySlides" src="img_mountains.jpg" style="width:100%">
+  <img class="mySlides" src="img_forest.jpg" style="width:100%">
+
+  <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
+  <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
+</div>
+  </li>
+  
+<li>
+<h2></h2>
 
 <div class="w3-content w3-display-container">
   <img class="mySlides" src="/images/intel_solve.png" style="width:100%">
@@ -23,7 +37,11 @@ author_profile: true
   <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
   <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
 </div>
-
+  </li>
+  
+  
+  
+  </ul>
 <script>
 var slideIndex = 1;
 showDivs(slideIndex);
